--- a/minesweeper/style.css
+++ b/minesweeper/style.css
@@ -129,7 +129,7 @@ button:focus {
 button.flagged {
     /* background-color: red; */
     background-image: url("flag.png");
-    background-size: 50px 50px;
+    background-size: 5vw 5vw;
 }
 
 button.revealed {
@@ -138,7 +138,7 @@ button.revealed {
 
 button.bomb {
     background-image: url("bomb.png");
-    background-size: 50px 50px;
+    background-size: 5vw 5vw;
 }
 
 
